--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <div class="app">
-            <h1>PhoneGap</h1>
+            <h1>ololo</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Hello, Mio!</p>
